--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: $DB_PASSWORD
-      POSTGRES_USER: $DB_USER
+      POSTGRES_USER: inz_user
     volumes:
     - pgdata:/var/lib/postgresql/data
     - ./dbbackup/inzynierka_dump.sql:/inzynierka_dump.sql
@@ -30,7 +30,7 @@ services:
       - "2137:8080"
     environment:
       DB_PASSWORD: $DB_PASSWORD
-      DB_USER: $DB_USER
+      DB_USER: inz_user
     depends_on:
       - postgis
 volumes:
