--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.9'
 services:
   front:
     container_name: frontend
-    build: ./Frontend
+    image: public.ecr.aws/i1s4s1t2/inz:latest
+    #build: ./Frontend
     ports:
       - "4200:4200"
     depends_on:
@@ -25,7 +26,8 @@ services:
     - ./dbbackup/restore.sh:/docker-entrypoint-initdb.d/restore.sh
   api:
     container_name: api
-    build: ./Backend
+    image: public.ecr.aws/i1s4s1t2/inz-api:latest
+    #build: ./Backend
     ports: 
       - "2137:8080"
     environment:
